created conponent carousel

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="./src/assets/logo.png" type="png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Food Eplorer</title>
+    <title>Food Explorer</title>
   </head>
   <body>
     <div id="root"></div>
